# ml-titanic-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: test.yml
api/: main.py  model.py  schemas.py
data/: README.md
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: predict.ts
frontend/src/components/: PredictionForm.tsx  PredictionResult.tsx
frontend/src/types/: passenger.ts
models/: README.md  best_model.joblib  best_model.joblib.dvc
notebooks/: exploration.ipynb
tests/: test_api.py
training/: train.py  validate.py
