[project]
name = "ml-titanic-predictor"
version = "1.1.0"
description = "Titanic survival prediction API built with scikit-learn, MLflow, FastAPI, and React"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "mlflow>=3.10.0",
    "pandas>=2.3.3",
    "numpy>=2.4.2",
    "joblib>=1.5.3",
    "gitpython>=3.1.46",
    "skops>=0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]
local = [
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
]
